Fixed horizontal resizing making the inputs out of alignment when the inputs took up more than half of the core div.

--- a/poestyle.css
+++ b/poestyle.css
@@ -74,7 +74,8 @@ table.result {
 
 table.formTable {
 	width: 50%;
-	margin-left: 25%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 th {
